Began to make "Update" endpoint.
