# app/Http/Controllers/API/BooksController.php
@@ -97,7 +97,7 @@ class BooksController extends Controller
      *      description="Returns updated book data",
      *      @OA\Parameter(
      *          name="id",
-     *          description="Book id",
+     *          description="Book ID for editing",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -111,24 +111,8 @@ class BooksController extends Controller
      *      @OA\Response(
      *          response=202,
      *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/Project")
+     *          @OA\JsonContent(ref="#/components/schemas/UpdateBookRequest")
      *       ),
-     *      @OA\Response(
-     *          response=400,
-     *          description="Bad Request"
-     *      ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      ),
-     *      @OA\Response(
-     *          response=404,
-     *          description="Resource Not Found"
-     *      )
      * )
      *
      * @param Request $request
@@ -137,7 +121,9 @@ class BooksController extends Controller
      */
     public function update(Request $request, $id)
     {
-        //
+
+
+        return response("Request=$request, id=$id");
     }
 
     /**
@@ -163,10 +149,6 @@ class BooksController extends Controller
      *          description="Successful operation",
      *          @OA\JsonContent()
      *       ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Resource Not Found"
-     *      )
      * )
      *
      * @param int $id
